# rust-obs-plugins

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml
motion-effects/: Cargo.toml
motion-effects/src/: lib.rs
obs-properties-derive/: Cargo.toml
obs-properties-derive/src/: lib.rs
obs-rs/: Cargo.toml
obs-rs/src/: context.rs  lib.rs  module.rs  source.rs
obs-rs/src/graphics/: mod.rs
obs-rs/src/source/: context.rs  ffi.rs  mod.rs  properties.rs  traits.rs
obs-sys/: Cargo.toml  README.md  build.rs  build_mac.rs  build_win.rs  wrapper.h
obs-sys/src/: lib.rs
plugins/motion-effect-clone/src/: lib.rs
plugins/rnnoise-denoiser-filter/: Cargo.toml  README.md
plugins/rnnoise-denoiser-filter/src/: lib.rs
plugins/scroll-focus-filter/: Cargo.toml  README.md
plugins/scroll-focus-filter/src/: crop_filter.effect  lib.rs  server.rs
scroll-focus-filter/: Cargo.toml
scroll-focus-filter/src/: lib.rs  server.rs
src/: context.rs  data.rs  hotkey.rs  lib.rs  log.rs  module.rs  native_enum.rs  properties.rs  result.rs  string.rs  wrapper.rs
src/graphics/: display.rs  mod.rs
src/media/: audio.rs  mod.rs  state.rs  video.rs
src/output/: context.rs  ffi.rs  mod.rs  traits.rs
src/source/: audio.rs  context.rs  data.rs  ffi.rs  hotkey.rs  media.rs  mod.rs  properties.rs  scene.rs  traits.rs  video.rs
