[package]
name = "obs-wrapper"
version = "0.2.1"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
license = "GPL-2.0"
description = "Safe wrapper of obs-sys"
repository = "https://github.com/bennetthardwick/rust-obs-plugins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
  "obs-sys",
  "plugins/scroll-focus-filter",
  "plugins/rnnoise-denoiser-filter"
]

[dependencies]
obs-sys = { path = "./obs-sys", version = "0.2.0" }
serde_json = "1.0.48"
paste = "0.1.7"
log = "0.4.11"
num-traits = "0.2.14"
