[package]
name = "obs-wrapper"
version = "0.2.3"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
license = "GPL-2.0"
description = "Safe wrapper of obs-sys"
repository = "https://github.com/bennetthardwick/rust-obs-plugins"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
  "obs-sys",
  "plugins/*",
]

[dependencies]
obs-sys = { path = "./obs-sys", version = "0.2.0" }
serde_json = "1.0.48"
paste = "0.1.7"
log = {version = "0.4.11", features = ["std"]}
num-traits = "0.2.14"
