[package]
name = "obs-properties-derive"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
obs-sys = { path = "../obs-sys", version = "0.1.0" }
syn = "1.0.16"
quote = "1.0.2"
