[package]
name = "obs-sys"
version = "0.3.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
links = "obs"
description = "Bindgen of <obs/obs.h>"
license = "GPL-2.0"
repository = "https://github.com/bennetthardwick/rust-obs-plugins"

[build-dependencies]
bindgen = "0.65"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0"
regex = "1.0"
winreg = "0.5"

[target.'cfg(target_os = "macos")'.build-dependencies]
shellexpand = "2.0"
