[package]
name = "rnnoise-denoiser-filter"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

[dependencies]
obs-wrapper = { path = "../..", version = "0.3.0" }
nnnoiseless = { version = "0.2.1" }
dasp = { version = "0.11.0", features = [ "interpolate", "signal", "ring_buffer", "interpolate-linear" ] }

[lib]
name = "rnnoisedenoiser"
crate-type = ["cdylib"]
