[package]
name = "scroll-focus-filter"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

[dependencies]
obs-wrapper = { path = "../..", version = "0.1.1" }
crossbeam-channel = "0.4.2"
xcb = { version = "0.9.0", features = [ "randr" ] }

[lib]
name = "scrollfocus"
crate-type = ["cdylib"]
